--- a/MonkeyAppLibrary.xctemplate/TemplateInfo.plist
+++ b/MonkeyAppLibrary.xctemplate/TemplateInfo.plist
@@ -22,7 +22,7 @@
 				<key>LD_RUNPATH_SEARCH_PATHS</key>
 				<string>$(inherited) @executable_path/Frameworks</string>
 				<key>OTHER_LDFLAGS</key>
-				<string>$(inherited)  -weak_library /usr/lib/libc++.dylib -weak_library /usr/lib/libstdc++.dylib -weak_library $(MonkeyDevPath)/Frameworks/libsubstrate.dylib</string>
+				<string>$(inherited) -weak_library $(MonkeyDevPath)/Frameworks/libsubstrate.dylib</string>
 				<key>ENABLE_BITCODE</key>
 				<string>NO</string>
 				<key>PRODUCT_NAME</key>
@@ -94,7 +94,7 @@
 			<key>MonkeyDevPath</key>
 			<string>/opt/MonkeyDev</string>
 			<key>IPHONEOS_DEPLOYMENT_TARGET</key>
-			<string>8.0</string>
+			<string>15.0</string>
 			<key>FRAMEWORK_SEARCH_PATHS</key>
 			<string>$(inherited) $(MonkeyDevPath)/Frameworks/** $(MonkeyDevPath)/Librarys/** $(MonkeyDevTheosPath)/vendor/lib</string>
 		</dict>
@@ -105,7 +105,7 @@
 			<key>Debug</key>
 			<dict>
 				<key>OTHER_LDFLAGS</key>
-				<string>$(inherited)  -weak_library /usr/lib/libc++.dylib -weak_library /usr/lib/libstdc++.dylib -weak_library $(MonkeyDevPath)/Frameworks/libsubstrate.dylib -lcycript -framework RevealServer</string>
+				<string>$(inherited) -weak_library $(MonkeyDevPath)/Frameworks/libsubstrate.dylib -lcycript -framework RevealServer</string>
 				<key>VALIDATE_PRODUCT</key>
 				<string>NO</string>
 				<key>GCC_OPTIMIZATION_LEVEL</key>
@@ -118,6 +118,8 @@
 				<string>NO</string>
 				<key>GCC_DYNAMIC_NO_PIC</key>
 				<string>NO</string>
+				<key>ENABLE_USER_SCRIPT_SANDBOXING</key>
+    			<string>NO</string>
 			</dict>
 			<key>Release</key>
 			<dict>
@@ -125,6 +127,8 @@
 				<string>YES</string>
 				<key>VALIDATE_PRODUCT</key>
 				<string>YES</string>
+				<key>ENABLE_USER_SCRIPT_SANDBOXING</key>
+    			<string>NO</string>
 			</dict>
 		</dict>
 	</dict>
